--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch --verbose"
   },
   "repository": "https://github.com/dislersd/webtesting-intro.git",
   "author": "dislersd <dislersd@gmail.com>",
